--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,9 @@
 {
-  "tasks": {
-    "test": "deno test --allow-read"
-  },
-  "importMap": "import_map.json"
+    "tasks": {
+        "test": "deno test --allow-read"
+    },
+    "importMap": "import_map.json",
+    "imports": {
+        "@/": "./src/"
+    }
 }
